--- a/mods/fabric-api.pw.toml
+++ b/mods/fabric-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric API"
-filename = "fabric-api-0.109.0+1.21.1.jar"
+filename = "fabric-api-0.110.0+1.21.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/aHuj8q0Q/fabric-api-0.109.0%2B1.21.1.jar"
+url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/Zp9iAZdZ/fabric-api-0.110.0%2B1.21.1.jar"
 hash-format = "sha1"
-hash = "35d3110bf44dc88f148d5feb13bfdae50268ba00"
+hash = "2b7f7f96571285868e962e269762987e817094ff"
 
 [update]
 [update.modrinth]
 mod-id = "P7dR8mSH"
-version = "aHuj8q0Q"
+version = "Zp9iAZdZ"
