--- a/mods/dynamic-fps.pw.toml
+++ b/mods/dynamic-fps.pw.toml
@@ -1,13 +1,13 @@
 name = "Dynamic FPS"
-filename = "dynamic-fps-3.7.6+minecraft-1.21.0-fabric.jar"
+filename = "dynamic-fps-3.7.7+minecraft-1.21.0-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/nGAANyOn/dynamic-fps-3.7.6%2Bminecraft-1.21.0-fabric.jar"
+url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/phWUwjYc/dynamic-fps-3.7.7%2Bminecraft-1.21.0-fabric.jar"
 hash-format = "sha1"
-hash = "5a1bc0630be861c9dac83c0be7a3ea0ccc4e70af"
+hash = "717a005d680d86e22a9406b227f85decd88513a0"
 
 [update]
 [update.modrinth]
 mod-id = "LQ3K71Q1"
-version = "nGAANyOn"
+version = "phWUwjYc"
