--- a/mods/immediatelyfast.pw.toml
+++ b/mods/immediatelyfast.pw.toml
@@ -1,13 +1,13 @@
 name = "ImmediatelyFast"
-filename = "ImmediatelyFast-Fabric-1.3.2+1.21.1.jar"
+filename = "ImmediatelyFast-Fabric-1.3.3+1.21.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/5ZwdcRci/versions/dYT65RCI/ImmediatelyFast-Fabric-1.3.2%2B1.21.1.jar"
+url = "https://cdn.modrinth.com/data/5ZwdcRci/versions/MDHa3xsw/ImmediatelyFast-Fabric-1.3.3%2B1.21.1.jar"
 hash-format = "sha1"
-hash = "ff455be35012823cfbd581fe45053b38cc8c9b83"
+hash = "c5e3af1690aadb100eb5077bec3f6089bb30785c"
 
 [update]
 [update.modrinth]
 mod-id = "5ZwdcRci"
-version = "dYT65RCI"
+version = "MDHa3xsw"
